3D-View Error: Backface-Culling shown with 'Textured Solid' when disabled #40498

Closed
opened 2014-06-04 15:35:30 +02:00 by xDonnervogelx · 10 comments
xDonnervogelx commented 2014-06-04 15:35:30 +02:00 (Migrated from localhost:3001)

System Information
Operating system: Windows 7

Blender Version
Broken: 2.70.a f93bc76

Short description of error
I've just downloaded the new version, but when I re-opened my recent world, something went wrong.
It seems like backface-culling is activated but I turned it off.
The textures in 3D-View are not shown as they should, I just enabled 'Textured Solid'.
When I first opened the file, I recognized, that there was an error shown on the top named: Auto-run disabled: Driver 'False' and two buttons named "Reload trusted" and "Ignore".
(Here are the two screenshots before Version upgrade and after:
{F92618}screen_13.png)

Exact steps for others to reproduce the error
I don't exactly know what went wrong but I've uploaded a tiny part of the file, maybe this way you could find out what I/Blender did wrong.
Eisfuchs.blend

**System Information** Operating system: Windows 7 **Blender Version** Broken: 2.70.a f93bc76 **Short description of error** I've just downloaded the new version, but when I re-opened my recent world, something went wrong. It seems like backface-culling is activated but I turned it off. The textures in 3D-View are not shown as they should, I just enabled 'Textured Solid'. When I first opened the file, I recognized, that there was an error shown on the top named: Auto-run disabled: Driver 'False' and two buttons named "Reload trusted" and "Ignore". (Here are the two screenshots before Version upgrade and after: {[F92618](https://archive.blender.org/developer/F92618/screen_12.png)}![screen_13.png](https://archive.blender.org/developer/F92619/screen_13.png)) **Exact steps for others to reproduce the error** I don't exactly know what went wrong but I've uploaded a tiny part of the file, maybe this way you could find out what I/Blender did wrong. [Eisfuchs.blend](https://archive.blender.org/developer/F92617/Eisfuchs.blend)
xDonnervogelx commented 2014-06-04 15:35:30 +02:00 (Migrated from localhost:3001)
Author

Changed status to: 'Open'

Changed status to: 'Open'
xDonnervogelx commented 2014-06-04 15:35:30 +02:00 (Migrated from localhost:3001)
Author

Added subscriber: @xDonnervogelx

Added subscriber: @xDonnervogelx

Added subscriber: @MarcClintDion

Added subscriber: @MarcClintDion

The normals for the eyes are facing inwards. All the other objects had slight errors in the normals. Recalculate seems to do what the mesh needs easily enough.

The normals for the eyes are facing inwards. All the other objects had slight errors in the normals. Recalculate seems to do what the mesh needs easily enough.

There is something weird going on with the viewport display in Textured mode using lights.

When I select a light then the models turn black and when I move the view slightly they go back to being shaded as expected.

I removed the materials from the model on the right to show the difference. I also removed the particle system that was attached to the model but this had no effect on the viewport difficulties.

In this picture the model display was going wonky when I selected them but only sometimes. Now it only happens when I select the lights. Weird.

I've been using this shading mode all this week and have seen nothing wrong until I loaded this .blend file.

viewport_Glitch.png
Eisfuchs(1).blend

There is something weird going on with the viewport display in Textured mode using lights. When I select a light then the models turn black and when I move the view slightly they go back to being shaded as expected. I removed the materials from the model on the right to show the difference. I also removed the particle system that was attached to the model but this had no effect on the viewport difficulties. In this picture the model display was going wonky when I selected them but only sometimes. Now it only happens when I select the lights. Weird. I've been using this shading mode all this week and have seen nothing wrong until I loaded this .blend file. ![viewport_Glitch.png](https://archive.blender.org/developer/F92639/viewport_Glitch.png) [Eisfuchs(1).blend](https://archive.blender.org/developer/F92641/Eisfuchs_1_.blend)

Added subscriber: @ideasman42

Added subscriber: @ideasman42

From testing this, it seems that the texture assosiated with this material is not found, which causes the texture not to be correctly initialized.

With the attached file:

  • Load: (Looks OK)
  • Select lamp: (Mesh turns black)

missing_material_image.blend

  • Changing the image type from "Simgle Image" to "Generated" fixes the problem. (since there is now a valid image buffer)
  • Disabling "Use Alpha" in the texture image panel, makes the object display solid black always (no flickering).
From testing this, it seems that the texture assosiated with this material is not found, which causes the texture not to be correctly initialized. With the attached file: - Load: (Looks OK) - Select lamp: (Mesh turns black) [missing_material_image.blend](https://archive.blender.org/developer/F92685/missing_material_image.blend) - Changing the image type from "Simgle Image" to "Generated" fixes the problem. *(since there is now a valid image buffer)* - Disabling "Use Alpha" in the texture image panel, makes the object display solid black always (no flickering).
Antonis Ryakiotakis was assigned by Campbell Barton 2014-06-05 09:33:48 +02:00
Author

This issue was referenced by e8c63caf77

This issue was referenced by e8c63caf77a1d3470556433065261a4ede3ebae2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e8c63caf77.

Closed by commit e8c63caf77.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40498
No description provided.